--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,6 +5,6 @@ metadata:
   annotations:
     github.com/project-slug: wamanrajesh/Ebiz
 spec:
-  type: other
-  lifecycle: unknown
+  type: website
+  lifecycle: experimental
   owner: guests
